0.8.8
# this will become release 0.8.9
- Improved support for "ALV-7004" files.
- Tool 'Overlay Curves': show cropped correlation curves
- Tool 'Trace view': increase size of window
- Tool 'Global fitting': remove forced, joint weights
- Bugfix: fitting algorithms did not work
- Under the hood:
   - Introduce new classes: Correlation, Fit, Trace
   - Code cleanup and rewrite to support planned features
0.8.8
- Improved support for "ALV-7004" files.
- If you install the GUI with pip, you now need to include
  the `GUI` requirement: `pip install pycorrfit[GUI]`.
  The GUI depends on matplotlib and wxPython which is not
  required for scripting with the pycorrfit module.
- Bugfix: missing version string on SuSe linux (#101)
- Under the hood:
   - Python entry point script replaces "bin/" script
   - Windows build system hosted by appveyor.com
   - MacOS X build system hosted by travis-ci.org
   - New builds use wxPython3 (#85)
   - Unicode support without `reload(sys)`
   - Error messages are more verbose
0.8.7
- Removed unused fitting parameter d_eva from model 6022 and
  secured backwards compatibility.
- Improved support for ALV700X (#92)
- Bugfix: Corrected false display of Unicode characters on Windows
- Under the hood:
   - Code cleanup with pyflakes
   - Repo cleanup (#98)
0.8.6
- Bugfix: Opening .fcs files with only one AC curve works now
- Zip files with measurements may now contain subfolders
- Improved pt3-file support from
  https://github.com/dwaithe/FCS_point_correlator (#89)
0.8.5
- Fixed bug that made it impossible to load data (#88)
- Exceptions are now handled by wxPython
- Under the hood:
   - Pythonic repository structure
   - Relative imports
   - Windows build machine is now Windows 7
   - Removed strict dependency on matplotlib
0.8.4
- Support for PicoQuant data file format
  Many thanks to Dominic Waithe (@dwaithe)
- Improved compatibility with Zeiss .fcs file format
- PyCorrFit is now dependent on Cython